trying to fix chat height on mobile

--- a/app/assets/stylesheets/public-chat.scss
+++ b/app/assets/stylesheets/public-chat.scss
@@ -4,6 +4,9 @@
   text-align: center;
   // top: 60%;
   // transform: rotate(270deg);
+  @media screen and (max-width: 700px) {
+    display: none;
+  }
 }
 
 #public-chat-layout {
@@ -58,6 +61,10 @@
   border-top-right-radius: 20px;
   height: 430px;
   overflow-y: scroll;
+
+  @media screen and (max-width: 350px) {
+    height: 325px;
+  }
 }
 
 #public-chat-type-here {
